# vql

./: .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  app.vql.events.pb  app.vql.json  goal.yaml  install-dev.sh  layout.vql.imgl.json  layout.vql.json  local.dev.txt  planfile.yaml  pyproject.toml
.github/workflows/: trigger-org-sync.yml
docs/: README.md  app.vql.json  architecture.md  desktop-capture.md  getting-started.md  img2svg-uri.md  packages.md  photo-roundtrip-sample.vql.json  photo-roundtrip.md  rest-window-api.md  vdisplay-imgl-automation.md  window-pipeline.md  window-uri.md
examples/: README.md  full-pipeline.sh  generate-demo-screen.py  img2nl-vql-flow.sh  live-capture-test.sh  photo-roundtrip-test.py  scope-window.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: test-goal.sh
src/vql/: __init__.py  api.py  facade.py
src/vql/adopt/: __init__.py  capture_backends.py  capture_diagnose.py  capture_image.py  capture_policy.py  capture_screen.py  capture_types.py  portal_capture.py  program_enrichment.py  program_grid.py  window.py
src/vql/compiler/: __init__.py  legacy_drawcommand.py  nl_to_vql.py
src/vql/drawing/: __init__.py  arrow_generator.py  bird_generator.py  boat_generator.py  butterfly_generator.py  car_generator.py  castle_generator.py  cat_generator.py  circle_generator.py  cloud_detailed_generator.py  commands.py  dot_generator.py  (+29 more)
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_adopt_window_capture.py  test_metadata_validation.py  test_photo_roundtrip.py  test_screenshot_merge.py  test_vql.py
(+13 files in other folders)
