[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vql"
version = "0.1.6"
description = "VQL — Visual Query Language for vector description of photographs and drawings"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "OQLOS Team" }, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
keywords = ["vql", "vector", "drawing", "svg", "visual", "dsl"]
dependencies = []

[project.optional-dependencies]
png = ["cairosvg>=2.7", "pillow>=10.0"]
desktop = ["pillow>=10.0", "mss>=9.0"]
playwright = ["playwright>=1.40.0"]
# Monorepo stack — installs sibling packages from ./packages/* (run from repo root)
pipeline = [
    "vql[desktop,png]",
]
dev = [
    "pytest>=8.0",
    "cairosvg>=2.7",
    "pillow>=10.0",
    "protobuf>=5.0",
    "jsonschema>=4.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vql"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["src", "packages/dsl2vql/src", "packages/uri2vql/src", "packages/nlp2vql/src"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
